--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-modal": "^3.13.1",
+    "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start"
